change landing page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary m-0 p-0 shadow">
   <div class="container-fluid d-flex justify-content-start">
-    <a class="navbar-brand mt-1" routerLink="/">
+    <a class="navbar-brand mt-1" routerLink="/pokemons">
       <img
         src="https://user-images.githubusercontent.com/37731582/39395092-949193b4-4ada-11e8-9f21-c049a771bbcc.png"
         alt="Pokedex logo"
